--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,21 @@
-language: c
 
-sudo: required
+# travis config
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-install:
-  - cp ./build/DESCRIPTION ./pkg
+language: r
+cache: packages
+
+r_github_packages:
+  - jimhester/covr
+
+before_script:
   - cd ./pkg
-  - ../travis-tool.sh install_deps
-  - ../travis-tool.sh install_r roxygen2
-  - R -e "install.packages('lintools',repos='http://data-cleaning.github.io/drat/')"
-  - R -e "install.packages('validate',repos='http://cran.rstudio.com')"
-  - R -e "roxygen2::update_collate('.');devtools::document()"
-script: 
-  - ../travis-tool.sh run_tests
-after_failure:
-  - ../travis-tool.sh dump_logs
+
 after_success:
-  - ../travis-tool.sh install_r covr
   - Rscript -e 'library(covr);coveralls()'
 
 notifications:
   email:
     on_success: change
     on_failure: change
+
+
