--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@
 language: r
 cache: packages
 
+before_install:
+  - cd ./pkg
+
 r_github_packages:
   - jimhester/covr
 
-before_script:
-  - cd ./pkg
 
 after_success:
   - Rscript -e 'library(covr);coveralls()'
