--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -11,10 +11,18 @@ Authors@R: c(person("Mark", "van der Loo",role=c("cre","aut"),email="mark.vander
 Description: Attempt to repair inconsistencies in data records by deriving
     information from valid values and validation rules restricting the data.
 Version: 0.0.1
-Depends: R (>= 3.2.0)
+Depends:
+    R (>= 3.2.0)
 URL: https://github.com/data-cleaning/deductive
 BugReports: https://github.com/data-cleaning/deductive/issues
 Date: 2015-08-28
-Imports: methods, lintools (>= 0.1.1), validate, stringdist
-Suggests: testthat, knitr
+Imports:
+    methods,
+    lintools (>= 0.1.1),
+    validate,
+    stringdist
+Suggests:
+    testthat,
+    knitr
 VignetteBuilder: knitr
+RoxygenNote: 5.0.1
