--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,6 +4,8 @@ export(correct_typos)
 export(impute_lr)
 import(lintools)
 import(methods)
-import(stringdist)
 import(validate)
+importFrom(stats,complete.cases)
+importFrom(stats,setNames)
+importFrom(stringdist,stringdist)
 useDynLib(deductive)
