--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ cache: packages
 
 before_install:
   - R -e "install.packages(c('devtools','roxygen2'))"
-  - R -e "devtools::document('pkg')"
+  - R -e "devtools::install_deps('./pkg')"
+  - R -e "devtools::document('./pkg')"
   - cd ./pkg
 
 r_packages:
