--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,19 @@
 # travis config
 
 language: r
-sudo: false
+sudo: required
 cache: packages
+
+addons:
+  apt:
+    packages:
+      - libxml2-dev
+
+r:
+ - release
+ - oldrel
+ - devel
+
 
 before_install:
   - R -e "install.packages(c('devtools','roxygen2','testthat','knitr'))"
