--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,23 +5,17 @@ Title: Data Correction and Imputation Using Deductive Methods
 LazyData: no
 Type: Package
 LazyLoad: yes
-Authors@R: c(person("Mark", "van der Loo",role=c("cre","aut"),email="mark.vanderloo@gmail.com")
-    , person("Edwin", "de Jonge", role="aut"))
-Description: Attempt to repair inconsistencies and missing values in data 
-    records by using information from valid values and validation rules 
-    restricting the data.
-Version: 0.1.3
-Depends:
-    R (>= 3.2.0)
+Authors@R: c(person("Mark", "van der
+        Loo",role=c("cre","aut"),email="mark.vanderloo@gmail.com") ,
+        person("Edwin", "de Jonge", role="aut"))
+Description: Attempt to repair inconsistencies and missing values in
+        data records by using information from valid values and
+        validation rules restricting the data.
+Version: 0.1.4
+Depends: R (>= 3.2.0)
 URL: https://github.com/data-cleaning/deductive
 BugReports: https://github.com/data-cleaning/deductive/issues
 Date: 2017-06-02
-Imports:
-    methods,
-    lintools (>= 0.1.1.2),
-    validate,
-    stringdist
-Suggests:
-    testthat,
-    knitr
-RoxygenNote: 6.0.1
+Imports: methods, lintools (>= 0.1.1.2), validate, stringdist
+Suggests: knitr, tinytest
+RoxygenNote: 6.1.1
