--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,8 @@ r:
 
 
 before_install:
-  - R -e "install.packages(c('devtools','roxygen2','testthat','knitr'))"
-  - R -e "devtools::install_deps('./pkg')"
-  - R -e "pkgload::load_all('pkg'); devtools::document('./pkg')"
+  - R -e "install.packages(c('tinytest','stringdist','knitr','roxygen2','pkgload'))"
+  - make doc
   - cd ./pkg
 
 r_packages:
