--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -5,9 +5,14 @@ Title: Data Correction and Imputation Using Deductive Methods
 LazyData: no
 Type: Package
 LazyLoad: yes
-Authors@R: c(person("Mark", "van der
-        Loo",role=c("cre","aut"),email="mark.vanderloo@gmail.com") ,
-        person("Edwin", "de Jonge", role="aut"))
+Authors@R: c(person("Mark", "van der Loo"
+                  , role=c("cre","aut")
+                  , email="mark.vanderloo@gmail.com"
+                  , comment= c(ORCID="0000-0002-9807-4686")),
+             person("Edwin", "de Jonge"
+                  , role="aut"
+                  , comment=c(ORCID="0000-0002-6580-4718")),
+             person("Reijer","Idema",role="ctb") )
 Description: Attempt to repair inconsistencies and missing values in
         data records by using information from valid values and
         validation rules restricting the data.
@@ -17,4 +22,4 @@ URL: https://github.com/data-cleaning/deductive
 BugReports: https://github.com/data-cleaning/deductive/issues
 Imports: methods, lintools, validate, stringdist
 Suggests: tinytest (>= 0.9.5)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
